--- a/composer.json
+++ b/composer.json
@@ -6,32 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "arcanedev/log-viewer": "~8.75",
-        "barryvdh/laravel-dompdf": "^0.9.0",
-        "doctrine/dbal": "~2.3",
-        "dompdf/dompdf": "^1.2",
         "fruitcake/laravel-cors": "^2.0",
-        "google/cloud-firestore": "^1.25",
-        "grpc/grpc": "^1.38",
         "guzzlehttp/guzzle": "^7.0.1",
-        "infyomlabs/adminlte-templates": "^3.0",
-        "infyomlabs/laravel-generator": "^3.0",
-        "intervention/image": "~2.7",
-        "jantinnerezo/livewire-alert": "^2.2",
-        "kreait/laravel-firebase": "^4.1",
         "laravel/framework": "^8.75",
-        "laravel/passport": "~10.1.3",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.4",
+        "infyomlabs/laravel-generator": "^3.0",
         "laravelcollective/html": "^6.2",
-        "lcobucci/jwt": "^4.1",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "livewire/livewire": "^2.10",
-        "luecano/numero-a-letras": "^3.0",
-        "maatwebsite/excel": "^3.1",
-        "paragonie/sodium_compat": "^1.17",
-        "simplesoftwareio/simple-qrcode": "~4"
+        "infyomlabs/adminlte-templates": "^3.0",
+        "doctrine/dbal": "~2.3",
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
